# ai-ml

relp/: .env  Makefile  main.py  pyproject.toml  requirements.txt
relp/config/: env.py  model.py
relp/data/cleaned/: tr_lestari.json  tr_non_lestari.json  ts_lestari.json  ts_non_lestari.json
relp/data/raw/: LESTARI.json  LESTARI_VALIDATION.json  NON_LESTARI.json  NON_LESTARI_VALIDATION.json
relp/data/testing/: ts_sdg_50.json
relp/data/training/: sdg-50.json  sdg.json
relp/scripts/: preprocessing_data.py  vectorize_data.py
resources/exercise/titanic survivor classification/: titanic_submission.csv
resources/rapid miner/Week 1/: Tugas IS-655 Lab BDA-2 Getting Started with RapidMiner (a) JerichoCristofelSiahaya-32932.rmp  Tugas IS-655 Lab BDA-2 Getting Started with RapidMiner (b) JerichoCristofelSiahaya-32932.rmp  Tugas IS-655 Lab BDA-2 Getting Started with RapidMiner (c) JerichoCristofelSiahaya-32932.rmp
resources/rapid miner/Week 2/: Challenge.txt  Tugas_IS-655_Lab_BDA-2_Data_Preparation_b_JerichoCristofelSiahaya-00000032932.rmp  Tugas_IS-655_Lab_BDA-2_Data_Preparation_c_JerichoCristofelSiahaya-00000032932.rmp  Tugas_IS-655_Lab_BDA-2_Data_Preparation_d_JerichoCristofelSiahaya-00000032932.rmp  Tugas_IS-655_Lab_BDA-2_Data_Preparation_e_JerichoCristofelSiahaya-00000032932.rmp  Tugas_IS-655_lab_BDA-2_Data_Preparation_a_JerichoCristofelSiahaya-00000032932.rmp
resources/rapid miner/Week 3/: Tugas IS-655 lab BDA-2 Data Exploration (a) JerichoCristofelSiahaya-32932.rmp  Tugas IS-655 lab BDA-2 Data Exploration (b) JerichoCristofelSiahaya-32932.rmp  (+1 more)
(+15 files in other folders)
