[tool.poetry]
name = "relp"
version = "0.1.0"
description = ""
authors = ["ASX <mragungsetiaji@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
beautifulsoup4 = "4.12.2"
ctranslate2 = "3.20.0"
flask = "2.3.3"
langchain = "0.0.325"
numpy = "1.26.0"
openai = "0.28.0"
python-dotenv = "1.0.0"
requests = "2.32.0"
scikit-learn = "1.5.0"
tqdm = "4.66.3"
transformers = "4.36.0"
urllib3 = "2.2.2"
idna = "3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
